swagger inmplement in product adding
